# zpdatafetch

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_publish.yml  linux-test.yml  macos-test.yml  manual_build_publish.yml  python-package.yml  windows-test.yml
examples/: README.md  async_basic_example.py  async_concurrent_example.py  async_rate_limited_example.py  async_zr_basic_example.py  async_zr_concurrent_example.py  sync_zp_advanced_example.py  sync_zp_basic_example.py  sync_zp_batch_example.py  sync_zp_session_management_example.py  sync_zr_basic_example.py  sync_zr_batch_example.py  sync_zr_rate_limiting_example.py
src/: cli_base.py  config_base.py  http_client_base.py
src/shared/: config.py  json_helpers.py
src/zp_data/: __init__.py  cyclist.py  primes.py  result.py  setup.py  signup.py  team.py  zp.py
src/zpdata/: __init__.py  config.py  cyclist.py  primes.py  result.py  signup.py  team.py  zp.py
src/zpdatafetch/: __init__.py  async_cyclist.py  async_primes.py  async_result.py  async_signup.py  async_team.py  async_zp.py  cli.py  config.py  cyclist.py  exceptions.py  logging_config.py  primes.py  result.py  signup.py  sprints.py  team.py  zp.py  zp_obj.py
src/zrdatafetch/: __init__.py  async_zr.py  async_zrresult.py  async_zrrider.py  async_zrteam.py  cli.py  config.py  exceptions.py  logging_config.py  zr.py  zrrating.py  zrresult.py  zrrider.py  zrteam.py
test/: conftest.py  test_async_cyclist.py  test_async_data_classes.py  test_async_primes.py  test_async_result.py  test_async_signup.py  test_async_team.py  test_async_zp.py  test_async_zr.py  test_async_zrresult.py  test_async_zrrider.py  test_async_zrteam.py  test_cli_subprocess_zrdata.py  test_cli_zr.py  test_config.py  test_config_zr.py  test_cyclist.py  test_logging.py  test_primes.py  test_result.py  test_signup.py  test_sprints.py  test_team.py  test_zp.py  test_zr_obj.py  test_zrresult.py  test_zrrider.py  test_zrteam.py
test/fixtures/: league_standings_2780.json  logged_in_page.html  login_page.html  zr_race_result_4613373.json
test/integration/: test_cli_error_handling.py
test/live/: conftest.py
test/live/test_zpdatafetch/: conftest.py  test_live_cyclist.py  test_live_league.py  test_live_primes.py  test_live_signup.py
test/live/test_zrdatafetch/: test_live_zrrider.py  test_live_zrteam.py
test/live/zpdatafetch/: test_live_result.py  test_live_sprints.py  test_live_team.py
test/live/zrdatafetch/: conftest.py  test_live_zrresult.py
test/shared/: test_cli_file_validation.py  test_json_helpers.py  test_validation.py
test/test_shared/: conftest.py  test_json_helpers.py  test_logging.py
test/test_zpdatafetch/: conftest.py  test_async_cyclist.py  test_async_league.py  test_async_result.py  test_async_team.py  test_cyclist.py  test_dataclass_validation.py  test_result.py  test_signup.py  test_sprints.py  test_zp.py
test/test_zpdatafetch/cli/: test_cli_subprocess_zpdata.py
test/test_zrdatafetch/: test_async_zr.py  test_async_zrrider.py  test_rate_limit_integration.py
test/zpdatafetch/: conftest.py  test_async_cyclist.py  test_async_primes.py  test_async_signup.py  test_async_sprints.py  test_async_team.py  test_async_zp.py  test_cyclist.py  test_league.py  test_primes.py  test_signup.py  test_team.py
test/zrdatafetch/: conftest.py  test_async_zrresult.py  test_async_zrteam.py  test_dataclass_constructor_validation.py  test_zr_obj.py  test_zrresult.py  test_zrrider.py  test_zrteam.py
tests/: test_async_zr.py  test_async_zrrider.py
