[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpdatafetch"
version = "1.1.3"
description = "A package for fetching data from Zwiftpower"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Doug Morris", email = "doug@mhost.com"}
]
keywords = ["zwift", "zwiftpower", "cycling", "racing", "data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.28.0",
  "keyring>=25.2.0",
  "keyrings-alt",
  "lxml>=5.4.0",
]

[project.urls]
Homepage = "https://github.com/puckdoug/zpdatafetch"
Repository = "https://github.com/puckdoug/zpdatafetch"
Issues = "https://github.com/puckdoug/zpdatafetch/issues"

[project.scripts]
zpdata = "zpdatafetch.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 80
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
venv = "3.12"
venvPath = ".."

[tool.uv]
dev-dependencies = [
  "wheel>=0.44.0",
  "setuptools>=73.0.1",
  "pytest>=8.3.2",
  "packaging>=24.1",
  "ruff>=0.6.2",
  "build>=1.2.1",
  "tox>=4.31.0",
]

[tool.pytest.ini_options]
filterwarnings = [
  # HTTPX warnings from libraries
  "ignore:.*strip_cdata.*HTMLParser().*:DeprecationWarning",
  "ignore:.*Setting per-request cookies=.*is being deprecated, because the expected behaviour on cookie persistence is ambiguous.*:DeprecationWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310,py311,py312,py313,py314

[testenv]
commands = pytest {posargs}
deps =
  pytest
"""
