[metadata]
name = zp_data
version = 0.0.1
url = https://github.com/puckdoug/zp_data
author = Doug Morris
author_email = "Doug Morris" <doug@mhost.com>
description = A package for fetching data from Zwiftpower
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
  =src
packages = find:

install_requires=
  httpx>=0.27.0
  beautifulsoup4>=4.12.3
  keyring>=25.2.0
  lxml>=5.2.1

[options.packages.find]
where = src
exclude = test*
